# CCCoreLib

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.ci/: conda.yml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  conda_packages.txt
cmake/: CCCoreLibConfig.cmake.in
doc/: CCCoreLib_doxygen_file
include/: AutoSegmentationTools.h  BoundingBox.h  CCConst.h  CCCoreLib.h  CCGeom.h  CCMath.h  CCMiscTools.h  CCPlatform.h  CCShareable.h  CCToolbox.h  CCTypes.h  CMakeLists.txt  ChamferDistanceTransform.h  CloudSamplingTools.h  ConjugateGradient.h  Delaunay2dMesh.h  DgmOctree.h  DgmOctreeReferenceCloud.h  DistanceComputationTools.h  ErrorFunction.h  FastMarching.h  FastMarchingForPropagation.h  Garbage.h  GenericCloud.h  GenericDistribution.h  GenericIndexedCloud.h  GenericIndexedCloudPersist.h  GenericIndexedMesh.h  GenericMesh.h  GenericOctree.h  GenericProgressCallback.h  GenericTriangle.h  GeometricalAnalysisTools.h  Grid3D.h  GridAndMeshIntersection.h  Jacobi.h  KdTree.h  Kriging.h  LocalModel.h  ManualSegmentationTools.h  (+21 more)
include/CCCoreLib/: AutoSegmentationTools.h  BoundingBox.h  CCConst.h  CCCoreLib.h  CCGeom.h  CCMiscTools.h  CCPlatform.h  CCShareable.h  CCToolbox.h  CCTypes.h  ChamferDistanceTransform.h  CloudSamplingTools.h  ConjugateGradient.h  Delaunay2dMesh.h  DgmOctree.h  DgmOctreeReferenceCloud.h  DistanceComputationTools.h  ErrorFunction.h  FastMarching.h  FastMarchingForPropagation.h  Garbage.h  GenericCloud.h  GenericDistribution.h  GenericIndexedCloud.h  GenericIndexedCloudPersist.h  GenericIndexedMesh.h  GenericMesh.h  GenericOctree.h  GenericProgressCallback.h  GenericTriangle.h  GeometricalAnalysisTools.h  Grid3D.h  Jacobi.h  KdTree.h  LocalModel.h  ManualSegmentationTools.h  MathTools.h  MeshSamplingTools.h  Neighbourhood.h  NormalDistribution.h  (+17 more)
include/Mathematics/: APInterval.h  BSNumber.h  BSRational.h  CMakeLists.txt  ConvexHull2.h  ConvexHull3.h  DistCircle3Circle3.h  ETManifoldMesh.h  IntrEllipse2Ellipse2.h  MinimumAreaBox2.h
src/: AutoSegmentationTools.cpp  BoundingBox.cpp  CCMiscTools.cpp  CCShareable.cpp  CMakeLists.txt  ChamferDistanceTransform.cpp  CloudSamplingTools.cpp  Delaunay2dMesh.cpp  DgmOctree.cpp  DgmOctreeReferenceCloud.cpp  DistanceComputationTools.cpp  ErrorFunction.cpp  FastMarching.cpp  FastMarchingForPropagation.cpp  GeometricalAnalysisTools.cpp  GridAndMeshIntersection.cpp  KdTree.cpp  Kriging.cpp  LocalModel.cpp  ManualSegmentationTools.cpp  MeshSamplingTools.cpp  Neighbourhood.cpp  NormalDistribution.cpp  NormalizedProgress.cpp  PointCloud.cpp  PointProjectionTools.cpp  Polyline.cpp  ReferenceCloud.cpp  RegistrationTools.cpp  SaitoSquaredDistanceTransform.cpp  ScalarField.cpp  ScalarFieldTools.cpp  SimpleMesh.cpp  StatisticalTestingTools.cpp  TrueKdTree.cpp  WeibullDistribution.cpp
