# SPDX-License-Identifier: MIT
# Copyright © Andy Maloney <asmaloney@gmail.com>

target_sources( ${PROJECT_NAME}
	PRIVATE
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/AutoSegmentationTools.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/BoundingBox.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/CCConst.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/CCCoreLib.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/CCGeom.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/CCMiscTools.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/CCPlatform.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/CCShareable.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/CCToolbox.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/CCTypes.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/ChamferDistanceTransform.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/CloudSamplingTools.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/ConjugateGradient.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/Delaunay2dMesh.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/DgmOctree.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/DgmOctreeReferenceCloud.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/DistanceComputationTools.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/ErrorFunction.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/FastMarching.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/FastMarchingForPropagation.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/Garbage.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/GenericCloud.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/GenericDistribution.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/GenericIndexedCloud.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/GenericIndexedCloudPersist.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/GenericIndexedMesh.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/GenericMesh.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/GenericOctree.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/GenericProgressCallback.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/GenericTriangle.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/GeometricalAnalysisTools.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/Grid3D.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/Jacobi.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/KdTree.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/LocalModel.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/ManualSegmentationTools.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/MathTools.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/MeshSamplingTools.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/Neighbourhood.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/NormalDistribution.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/ParallelSort.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/PointCloud.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/PointCloudTpl.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/PointProjectionTools.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/Polyline.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/RayAndBox.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/ReferenceCloud.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/RegistrationTools.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/SaitoSquaredDistanceTransform.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/ScalarField.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/ScalarFieldTools.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/SimpleMesh.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/SimpleTriangle.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/SquareMatrix.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/StatisticalTestingTools.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/TrueKdTree.h
		${CMAKE_CURRENT_LIST_DIR}/CCCoreLib/WeibullDistribution.h
)

install(
	FILES
		CCCoreLib/AutoSegmentationTools.h
		CCCoreLib/BoundingBox.h
		CCCoreLib/CCConst.h
		CCCoreLib/CCCoreLib.h
		CCCoreLib/CCGeom.h
		CCCoreLib/CCMiscTools.h
		CCCoreLib/CCPlatform.h
		CCCoreLib/CCShareable.h
		CCCoreLib/CCToolbox.h
		CCCoreLib/CCTypes.h
		CCCoreLib/ChamferDistanceTransform.h
		CCCoreLib/CloudSamplingTools.h
		CCCoreLib/ConjugateGradient.h
		CCCoreLib/Delaunay2dMesh.h
		CCCoreLib/DgmOctree.h
		CCCoreLib/DgmOctreeReferenceCloud.h
		CCCoreLib/DistanceComputationTools.h
		CCCoreLib/ErrorFunction.h
		CCCoreLib/FastMarching.h
		CCCoreLib/FastMarchingForPropagation.h
		CCCoreLib/Garbage.h
		CCCoreLib/GenericCloud.h
		CCCoreLib/GenericDistribution.h
		CCCoreLib/GenericIndexedCloud.h
		CCCoreLib/GenericIndexedCloudPersist.h
		CCCoreLib/GenericIndexedMesh.h
		CCCoreLib/GenericMesh.h
		CCCoreLib/GenericOctree.h
		CCCoreLib/GenericProgressCallback.h
		CCCoreLib/GenericTriangle.h
		CCCoreLib/GeometricalAnalysisTools.h
		CCCoreLib/Grid3D.h
		CCCoreLib/Jacobi.h
		CCCoreLib/KdTree.h
		CCCoreLib/LocalModel.h
		CCCoreLib/ManualSegmentationTools.h
		CCCoreLib/MathTools.h
		CCCoreLib/MeshSamplingTools.h
		CCCoreLib/Neighbourhood.h
		CCCoreLib/NormalDistribution.h
		CCCoreLib/ParallelSort.h
		CCCoreLib/PointCloud.h
		CCCoreLib/PointCloudTpl.h
		CCCoreLib/PointProjectionTools.h
		CCCoreLib/Polyline.h
		CCCoreLib/RayAndBox.h
		CCCoreLib/ReferenceCloud.h
		CCCoreLib/RegistrationTools.h
		CCCoreLib/SaitoSquaredDistanceTransform.h
		CCCoreLib/ScalarField.h
		CCCoreLib/ScalarFieldTools.h
		CCCoreLib/SimpleMesh.h
		CCCoreLib/SimpleTriangle.h
		CCCoreLib/SquareMatrix.h
		CCCoreLib/StatisticalTestingTools.h
		CCCoreLib/TrueKdTree.h
		CCCoreLib/WeibullDistribution.h
	DESTINATION
		include/CCCoreLib
)

target_include_directories( ${PROJECT_NAME}
	PUBLIC
		$<INSTALL_INTERFACE:include/CCCoreLib>
		$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/CCCoreLib>
)

